syntax = "proto3";
package tab;

option go_package = 'internal/pb';

message Tab {
  string name = 1;
  string url = 2;
  string favicon = 3;
  string uid = 4;
  int32 index = 5;
}

message GroupOption {
  repeated string tags = 1;
}

message Group {
  string name = 1;
  string uid = 2;
  int32 index = 3;
  int64 ts = 4;
  GroupOption option = 5;
  repeated Tab tabs = 6;
}

message Client {
  string name = 1;
  string ext_id = 2;
  string uid = 3;
  int64 last_access_time = 4;
  repeated Group groups = 5;
}

message BarkHistory {
  int64 id = 1;
  int64 ts = 2;
  string from = 3;
  string key = 4;
  string title = 5;
  string content = 6;
  map<string, string> params = 7;
}

message BarkDevice {
  int64 id = 1;
  string name = 2;
  string url = 3;
}

message BarkMessage {
  string title = 1;
  string content = 2;
  string url = 3;
}
